# programming

./: README.md
procrustes/: README.md
procrustes/Python/: procrustes.py  run_procrustes.ipynb  test_procrustes.py
procrustes/R/: procrustesS3.R  run_procrustesS3.R  test_procrustesS3.R
vigenere/: README.md
vigenere/Python/vigenere/: LICENSE  README.md  pyproject.toml
vigenere/Python/vigenere/src/vigenere/: __init__.py  vigenerecipher.py
vigenere/Python/vigenere/tests/: test_vigenerecipher.py
vigenere/R/vigenere/: DESCRIPTION  NAMESPACE
vigenere/R/vigenere/R/: vigenerecipher.R
vigenere/R/vigenere/man/: vigdecrypt.Rd  vigencrypt.Rd
vigenere/R/vigenere/tests/: testthat.R
vigenere/R/vigenere/tests/testthat/: test-vigenerecipher.R
